# pytima

./: .gitignore  LICENSE  README.MD  demo.ipynb  mindif.py  pyproject.toml  setup.py
pytima/: .gitignore  __init__.py  demo.py  mindif.py  setup.py
